@@ -10,29 +10,37 @@ import org.polimi.ingsw.galaxytrucker.visitors.components.ComponentNameVisitorIn
 
 import java.io.File;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
 
 public class MockShipFactory {
 
-    public static List<Tile> loadAllTiles() throws IOException, IOException {
+    public static List<Tile> loadAllTiles() {
         File file = new File("src/main/resources/tiledata.json");
         ObjectMapper mapper = new ObjectMapper();
-        return mapper.readValue(file, new TypeReference<>() {});
+        List<Tile> result = new ArrayList<>();
+        try{
+            result = mapper.readValue(file, new TypeReference<>() {});
+        }
+        catch (IOException e){
+            System.err.println(e.getMessage());
+        }
+
+        return result;
     }
 
-    public static List<Tile> findTilesByComponentType(String componentType) throws IOException {
+    public static List<Tile> findTilesByComponentType(String componentType) {
         List<Tile> allTiles = loadAllTiles();
-        return allTiles.stream()
+        if(allTiles.isEmpty()) return allTiles;
+        else return allTiles.stream()
                 .filter(t -> t.getMyComponent() != null &&
                         componentType.equalsIgnoreCase(t.getMyComponent().accept(new ComponentNameVisitor())))
                 .toList();
     }
 
 
-    public static Ship createMockShip() throws IOException {
-
+    public static Ship createMockShip() {
         Ship ship = new Ship(false);
-
 
         List<Tile> centralHousings = findTilesByComponentType("CentralHousingUnit");
         List<Tile> batteries = findTilesByComponentType("BatterySlot");
@@ -41,36 +49,40 @@ public class MockShipFactory {
         List<Tile> modularHousingUnits = findTilesByComponentType("ModularHousingUnit");
         List<Tile> doubleEngines = findTilesByComponentType("DoubleEngine");
 
-        Tile cannon = cannons.get(0);
-        Tile engine = engines.get(10);
-        Tile battery = batteries.get(0);
-        Tile centralHousing = centralHousings.get(0);
-        Tile modularHousingUnit = modularHousingUnits.get(0);
-        Tile doubleEngine = doubleEngines.get(0);
-        ModularHousingUnit mhu =(ModularHousingUnit) modularHousingUnit.getMyComponent();
-        mhu.addHumanCrew();
-        modularHousingUnit.setMyComponent(mhu);
-        Tile modularHousingUnit2 = modularHousingUnits.get(1);
-        ModularHousingUnit mhu2 =(ModularHousingUnit) modularHousingUnit2.getMyComponent();
-        mhu2.addHumanCrew();
-        modularHousingUnit2.setMyComponent(mhu2);
+        Tile cannon = !cannons.isEmpty() ? cannons.getFirst() : null;
+        Tile engine = !engines.isEmpty() ? engines.get(10) : null;
+        Tile battery = !batteries.isEmpty() ? batteries.getFirst() : null;
+        Tile centralHousing = !centralHousings.isEmpty() ? centralHousings.getFirst() : null;
+        Tile modularHousingUnit = !modularHousingUnits.isEmpty() ? modularHousingUnits.getFirst() : null;
+        Tile doubleEngine = !doubleEngines.isEmpty() ? doubleEngines.getFirst() : null;
 
+        ModularHousingUnit mhu;
+        if(modularHousingUnit != null) {
+            mhu = (ModularHousingUnit) modularHousingUnit.getMyComponent();
+            mhu.addHumanCrew();
+            modularHousingUnit.setMyComponent(mhu);
+        }
+
+        Tile modularHousingUnit2 = modularHousingUnits.size() > 1 ? modularHousingUnits.get(1) : null;
+        ModularHousingUnit mhu2;
+        if(modularHousingUnit2 != null) {
+            mhu2 = (ModularHousingUnit) modularHousingUnit2.getMyComponent();
+            mhu2.addHumanCrew();
+            modularHousingUnit2.setMyComponent(mhu2);
+        }
 
         try {
-            ship.putTile(centralHousing, new Position(3, 2));
-            ship.putTile(battery, new Position(2, 2));
-            ship.putTile(doubleEngine, new Position(3, 3));
-            ship.putTile(cannon, new Position(3, 1));
-            ship.putTile(modularHousingUnit, new Position(2, 1));
-            ship.putTile(modularHousingUnit2, new Position(4, 2));
-
+            if(centralHousing != null) ship.putTile(centralHousing, new Position(3, 2));
+            if(battery != null) ship.putTile(battery, new Position(2, 2));
+            if(doubleEngine != null) ship.putTile(doubleEngine, new Position(3, 3));
+            if(cannon != null) ship.putTile(cannon, new Position(3, 1));
+            if(modularHousingUnit != null) ship.putTile(modularHousingUnit, new Position(2, 1));
+            if(modularHousingUnit2 != null) ship.putTile(modularHousingUnit2, new Position(4, 2));
         } catch (InvalidTilePosition e) {
             System.err.println("Placement failed: " + e.getMessage());
         }
 
         return ship;
-
-
     }
 
 
